# f450_uav

./: README.md
control_design/: F450Dynamics.py  optmize_pid.py  pid.py  requirements.txt  run.sh
f450_description/: CMakeLists.txt  f450_uav.gv  package.xml
f450_description/config/: ros2_control.yaml
f450_description/launch/: empty_world.launch.py  state_publisher_launch.py
f450_description/meshes/: 1045_propeller.part  1045_propeller.stl  arm.part  arm.stl  battery.part  bottom_plate.part  bottom_plate.stl  camera_support.part  camera_support.stl  esp32_dev_kit_v1.part  esp32_dev_kit_v1.stl  holybro_brushless_motor_2216_880kv.part  holybro_brushless_motor_2216_880kv.stl  leg.part  littlebee_spring30a.part  logitech_c270b.part  logitech_c270b.stl  logitech_c270c.part  mpu_9250.part  mpu_9250.stl  protoboard.part  raspberry_pi_3_b_plus.part  top_plate.part  top_plate__2.part  top_plate__2.stl
f450_description/scripts/: README.md  example.xacro  f450_uav.gv  requirements.txt  setup.sh  transform.py
f450_description/scripts/f450_robot/: config.json  robot.urdf
f450_description/scripts/f450_robot/assets/: arm.part  battery.stl  leg.stl  littlebee_spring30a.part  littlebee_spring30a.stl  logitech_c270c.stl  mpu_9250.part  protoboard.part  protoboard.stl  raspberry_pi_3_b_plus.part  top_plate.stl
f450_description/urdf/: f450_base.xacro  f450_frames.xacro  f450_gazebo.xacro  f450_meshes.xacro  f450_ros2_control.xacro  robot.urdf.xacro
f450_description/worlds/: empty_fortress.sdf
firmware/: ESCManager.cpp  ESCManager.hpp  GY91IMU.cpp  GY91IMU.hpp  README.md  (+5 more)
(+11 files in other folders)
